--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </label>
       <button id="resetBtn" class="btn">초기화</button>
     </div>
-    <div class="hint">※ id가 <b>bg</b>로 시작하는 요소(배경)는 드롭 불가로 처리됩니다.</div>
+    <div class="hint">※ id가 <b>bg</b>로 시작하는 요소(배경)는 드롭 불가입니다.</div>
   </header>
 
   <main class="layout">
@@ -36,6 +36,7 @@
       <h3>교수 목록</h3>
       <div class="hint">정렬: 직위 → 호봉(내림) → 승급일(오름) → 생년월일(오름)</div>
       <div id="people" class="people"></div>
+      <div class="hint small">※ 오른쪽 목록으로 드래그하면 배정 취소</div>
     </aside>
   </main>
 
