--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8"/>
-  <title>연구실 배정 데모</title>
+  <title>연구실 배정 v1.01</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="styles.css"/>
-
   <!-- SheetJS (엑셀 파서) -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+  <!-- app.js를 DOM 후 실행 -->
+  <script defer src="app.js"></script>
 </head>
 <body>
   <header class="toolbar">
@@ -22,8 +23,17 @@
       </label>
       <button id="resetBtn" class="btn">초기화</button>
     </div>
-    <div class="hint">※ id가 <b>bg</b>로 시작하는 요소(배경)는 드롭 불가입니다.</div>
+
+    <div class="group">
+      <input id="search" type="text" placeholder="교수 이름 검색"/>
+      <span class="hint">배경(id가 <b>bg</b> 시작)은 드롭 불가</span>
+      <span class="version" id="versionBadge">v1.01</span>
+    </div>
   </header>
+
+  <div class="statusbar">
+    <span id="status">대기 중… SVG/엑셀을 업로드하세요</span>
+  </div>
 
   <main class="layout">
     <section class="canvasWrap">
@@ -35,40 +45,9 @@
     <aside class="side">
       <h3>교수 목록</h3>
       <div class="hint">정렬: 직위 → 호봉(내림) → 승급일(오름) → 생년월일(오름)</div>
-      <div id="people" class="people"></div>
-      <div class="hint small">※ 오른쪽 목록으로 드래그하면 배정 취소</div>
+      <div id="people" class="people scrollable"></div>
+      <div class="hint small">※ 오른쪽 목록 영역으로 드래그하면 “배정 취소”</div>
     </aside>
   </main>
-
-  <!-- 방 설정 패널 -->
-  <div class="panel" id="roomPanel" hidden>
-    <div class="panelHead">
-      <strong id="panelTitle">방 설정</strong>
-      <button class="btn ghost" id="closePanel">닫기</button>
-    </div>
-    <div class="row"><label>방 ID</label><input id="p_roomId" disabled/></div>
-    <div class="row"><label>방 타입</label>
-      <select id="p_type">
-        <option value="">(자유)</option>
-        <option>1인실</option><option>2인실</option><option>3인실</option>
-        <option>4인실</option><option>6인실</option>
-      </select>
-    </div>
-    <div class="row"><label>정원</label><input id="p_capacity" type="number" min="1" value="1"/></div>
-    <div class="row"><label>성별 제한</label>
-      <select id="p_gender">
-        <option value="">무관</option>
-        <option value="남자">남자</option>
-        <option value="여자">여자</option>
-      </select>
-    </div>
-    <div class="panelFoot">
-      <button class="btn primary" id="applyPanel">적용</button>
-      <button class="btn" id="clearRoom">배정 전부 해제</button>
-    </div>
-    <div class="hint small">타입 선택 시 정원 자동 제안(1/2/3/4/6)</div>
-  </div>
-
-  <script src="app.js"></script>
 </body>
 </html>
